# FAK-project

./: CMakeLists.txt  mainWindow.cpp  main_l3.cpp
src/: MainWindow.cpp  MainWindow.h  ToolWindow.cpp  ToolWindow.h
